Fix #330 by glossarizing dkey book-text paragraphs

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -78,7 +78,9 @@
   </div>
 {% endif %}
 
+<div class="flora-nova-angliae-text">
 {{ page.text|render_floating_figures|render_figure_links|safe }}
+</div>
 
 {% if leads %}
   <ul class="couplets couplet" id="c1"
