Fix #328 by adding dkey help page
Also, I tweaked the word "Nova" a few places in my code because in the
name of the book it is plural "Novae" (and thus Harvard's page has the
spelling wrong, which is what happened to be open in a browser tab
when I was typing the name in a few minutes ago).

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -15,8 +15,8 @@
 {% with title=page|display_title|expand_group_title %}
 
 <div class="offer-help-aside">
-  <span>Want help getting started?</span>
-  <a href="#" class="button">Get Help</a>
+  <span>What's a dichotomous key?</span>
+  <a href="/help/dkey/" class="button">Get Help</a>
   <br>
   <div class="groupbox">
     <select>
@@ -78,7 +78,7 @@
   </div>
 {% endif %}
 
-<div class="flora-nova-angliae-text">
+<div class="flora-novae-angliae-text">
 {{ page.text|render_floating_figures|render_figure_links|safe }}
 </div>
 
