List the D. Key help page in the Help navigation.
List it in the left navigation and on the main Help page. (#337)

--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -15,7 +15,7 @@
 {% with title=page|display_title|expand_group_title %}
 
 <div class="offer-help-aside">
-  <span>What's a dichotomous key?</span>
+  <span>What&#8217;s a dichotomous key?</span>
   <a href="/help/dkey/" class="button">Get Help</a>
   <br>
   <div class="groupbox">
