--- a/gobotany/site/templates/gobotany/_help_navigation.html
+++ b/gobotany/site/templates/gobotany/_help_navigation.html
@@ -11,6 +11,9 @@
     <div class="section advanced-map">
         <h4>{% nav_item 'Advanced Map to Groups' site-advanced-map %}</h4>
     </div>
+    <div class="section dkey">
+        <h4>{% nav_item "What&#8217;s a Dichotomous Key?" site-help-dkey %}</h4>
+    </div>
     <div class="section glossary">
         <h4>{% nav_item 'Glossary' site-glossary 'a' %}</h4>
     </div>
