--- a/gobotany/site/templates/gobotany/help.html
+++ b/gobotany/site/templates/gobotany/help.html
@@ -29,7 +29,7 @@
 		
     <h2>For the Dichotomous Key</h2>
 	
-    <p>Help will be posted soon.</p>
+    <p><a href="dkey/">What&#8217;s a Dichotomous Key?</a></p>
 		
     <h2>For PlantShare</h2>
     
