--- a/gobotany/site/templates/gobotany/help_dkey.html
+++ b/gobotany/site/templates/gobotany/help_dkey.html
@@ -6,11 +6,11 @@
     require(['site/help']);
 {% endblock %}
 
-{% block body_attributes %}id="help" class="help"{% endblock %}
+{% block body_attributes %}id="dkey" class="help"{% endblock %}
 
 {% block main_content %}
 
-<h1>What's a Dichotomous Key?</h1>
+<h1>What&#8217;s a Dichotomous Key?</h1>
 
 <p>
 A <b>dichotomous key</b> presents a set of paired choices that describe
@@ -22,7 +22,7 @@ paired options, eventually narrows down to an individual species.
 </p>
 
 <p>
-The Go Botany Dichotomous Key covers all 3500 species, subspecies, and
+The Go Botany Dichotomous Key covers all 3,500 species, subspecies, and
 varieties of native and naturalized plants in New England, and is
 designed for experienced botanists.
 </p>
