Add D. Key help page to the site search. (#337)

--- a/gobotany/site/templates/gobotany/help_dkey.html
+++ b/gobotany/site/templates/gobotany/help_dkey.html
@@ -10,7 +10,7 @@
 
 {% block main_content %}
 
-<h1>What&#8217;s a Dichotomous Key?</h1>
+<h1>What’s a Dichotomous Key?</h1>
 
 <p>
 A <b>dichotomous key</b> presents a set of paired choices that describe
