--- a/gobotany/dkey/templates/dkey/page.html
+++ b/gobotany/dkey/templates/dkey/page.html
@@ -15,7 +15,7 @@
 {% with title=page|display_title|expand_group_title %}
 
 <div class="offer-help-aside">
-  <span>What&#8217;s a dichotomous key?</span>
+  <span>What’s a dichotomous key?</span>
   <a href="/help/dkey/" class="button">Get Help</a>
   <div id="jump-nav">
     <div class="groupbox">
