--- a/gobotany/site/templates/gobotany/_help_navigation.html
+++ b/gobotany/site/templates/gobotany/_help_navigation.html
@@ -12,7 +12,7 @@
         <h4>{% nav_item 'Advanced Map to Groups' site-advanced-map %}</h4>
     </div>
     <div class="section dkey">
-        <h4>{% nav_item "What&#8217;s a Dichotomous Key?" site-help-dkey %}</h4>
+        <h4>{% nav_item "What’s a Dichotomous Key?" site-help-dkey %}</h4>
     </div>
     <div class="section glossary">
         <h4>{% nav_item 'Glossary' site-glossary 'a' %}</h4>
