Disable CSS/JS version strings for now.
Since the latest git short_version method is not working on our Dev
Heroku instance, will try another way. (#338)

--- a/gobotany/site/templates/gobotany/_base.html
+++ b/gobotany/site/templates/gobotany/_base.html
@@ -16,7 +16,7 @@
 
         {# CSS goes here. #}
         {% block css %}
-        <link rel="stylesheet" href="/static/css/site.css?v={% git_short_version %}">
+        <link rel="stylesheet" href="/static/css/site.css?v=">
         {% endblock %}
 
         {# JS goes here. #}
@@ -43,7 +43,7 @@
         {% else %}
 
         <!-- PRODUCTION / DEPLOYMENT FILES -->
-        <script src="/static/js/gobotany.application.js?v={% git_short_version %}"></script>
+        <script src="/static/js/gobotany.application.js?v="></script>
 
         {% endif %}
 
