--- a/gobotany/static/sass/_dkey.scss
+++ b/gobotany/static/sass/_dkey.scss
@@ -1,57 +1,6 @@
 /* Dichotomous Key */
 
-/* Definitions */
-
-$logo_width: 450px;
-
-$body_bg: #f0f0c0;
-$text_gray: #606060;
-$text_green: #519136;
-$text_dark_green: #35661C;
-$inactive_bg: #d9dbb1;
-$active_border: #7abe58;
-$active_bg: #b4d57f;
-
-$orange1: #dc9402;
-$orange2: #e29b0b;
-$orange3: #e39d0e;
-$orange4: #f0b448;
-$orange5: #f6be59;
-
-$list_popup_border: #acac90;
-
-$orange_gradient: linear-gradient(
-    top, $orange1 0%, $orange4 40%, $orange1 100%);
-
-$bright_orange_gradient: linear-gradient(
-    top, $orange2 0%, $orange5 32%, $orange5 50%, $orange3 100%);
-
-$disabled_orange_gradient: linear-gradient(
-    top, mix($body_bg, $orange2, 75%) 0%, mix($body_bg, $orange5, 75%) 32%,
-    mix($body_bg, $orange5, 75%) 50%, mix($body_bg, $orange3, 75%) 100%);
-
-.orange-button {
-    min-width: 10em;
-    @include border-radius(1em);
-    @include single-box-shadow(darken($inactive_bg, 30), 0px, 1px, 4px);
-    border: 1px solid $orange1;
-    @include background($orange_gradient);
-    padding: 0.3em 0.5em;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    font-family: $headings-font;
-    font-weight: bold;
-    line-height: 1.5em;
-    letter-spacing: (1em / 12);
-    &:hover {
-        @include background($bright_orange_gradient);
-    }
-    &.disabled {
-        border-color: mix($body_bg, $orange2, 75%);
-        @include background($disabled_orange_gradient);
-    }
-}
+@import "_mixins";
 
 /* Styles */
 
