--- a/gobotany/static/css/edit.css
+++ b/gobotany/static/css/edit.css
@@ -11,12 +11,16 @@
 
 .pile-character-grid { position: relative; }
 .pile-character-grid .column { z-index: -1; position: absolute; background-color: #fafae9; }
+.pile-character-grid div.expanded { border-top: 1px solid #519136; border-bottom: 1px solid #519136; }
 .pile-character-grid div:hover { background-color: #fafae9; }
 .pile-character-grid div:hover span { /* "expand" arrow */ visibility: visible; }
+.pile-character-grid div:hover.expanded { background-color: transparent; }
 .pile-character-grid i { position: relative; display: inline-block; width: 20em; }
-.pile-character-grid i .expand-button { cursor: pointer; position: absolute; right: 2px; top: -2px; background-color: #dc9402; padding: 2px 8px 4px; color: white; font-size: 0.8em; }
+.pile-character-grid i .expand-button { cursor: pointer; position: absolute; right: 2px; top: -2px; background-color: #dc9402; padding: 2px 8px 4px; color: white; font-size: 0.8em; font-style: normal; }
 .pile-character-grid b { display: inline-block; border: 0px solid #dc9402; padding: 4px 2px; cursor: pointer; }
 .pile-character-grid b.x { background-color: #519136; color: white; }
+.pile-character-grid b:hover { background-color: #fafae9; z-index: 2; }
+.pile-character-grid b:hover.x { background-color: black; }
 
 .pile-character-bigrow { border-top: 1px solid #519136; border-bottom: 1px solid #519136; background-color: #f0f0c0; }
 .pile-character-bigrow i { position: relative; display: inline-block; font-weight: bold; margin-left: -20em; width: 20em; }
