--- a/gobotany/static/css/edit.css
+++ b/gobotany/static/css/edit.css
@@ -9,7 +9,7 @@
 
 .edit-character-definition { margin-top: 0; margin-left: 2em; margin-bottom: 0; }
 
-.pile-character-grid { position: relative; }
+.pile-character-grid { position: relative; margin-top: 2em; }
 .pile-character-grid .column { z-index: -1; position: absolute; background-color: #fafae9; }
 .pile-character-grid div.expanded { border-top: 1px solid #519136; border-bottom: 1px solid #519136; }
 .pile-character-grid div:hover { background-color: #fafae9; }
@@ -20,13 +20,6 @@
 .pile-character-grid b { display: inline-block; border: 0px solid #dc9402; padding: 4px 2px; cursor: pointer; }
 .pile-character-grid b.x { background-color: #519136; color: white; }
 .pile-character-grid b:hover { background-color: #fafae9; z-index: 2; }
-.pile-character-grid b:hover.x { background-color: black; }
-
-.pile-character-bigrow { border-top: 1px solid #519136; border-bottom: 1px solid #519136; background-color: #f0f0c0; }
-.pile-character-bigrow i { position: relative; display: inline-block; font-weight: bold; margin-left: -20em; width: 20em; }
-.pile-character-bigrow i span { /* drop-down arrow */ position: absolute; right: 0; font-style: normal; }
-.pile-character-bigrow div { padding-left: 20em; }
-.pile-character-bigrow b { display: inline-block; padding: 0px 2px; }
-.pile-character-bigrow b.spacer { visibility: hidden; }
+.pile-character-grid b:hover.x { background-color: #27471a; }
 
 .value-tip { display: none; position: absolute; padding: 0.5em; background-color: #fafae9; border: 2px solid #dc9402; -webkit-border-radius: 1em; -moz-border-radius: 1em; -ms-border-radius: 1em; -o-border-radius: 1em; border-radius: 1em; -webkit-box-shadow: 0px 1px 4px #d3d344; -moz-box-shadow: 0px 1px 4px #d3d344; box-shadow: 0px 1px 4px #d3d344; }
