--- a/gobotany/static/sass/edit.scss
+++ b/gobotany/static/sass/edit.scss
@@ -15,6 +15,7 @@ $highlight: lighten($body_bg, 10);
 
 .pile-character-grid {
     position: relative;
+    margin-top: 2em;
 
     .column {
         z-index: -1;
@@ -62,36 +63,7 @@ $highlight: lighten($body_bg, 10);
 
         &.x { background-color: $text_green; color: white; }
         &:hover { background-color: $highlight; z-index: 2; }
-        &:hover.x { background-color: black; }
-    }
-}
-
-.pile-character-bigrow {
-    border-top: 1px solid $text_green;
-    border-bottom: 1px solid $text_green;
-    background-color: $body_bg;
-
-    i {
-        position: relative;
-        display: inline-block;
-        font-weight: bold;
-        margin-left: -20em;
-        width: 20em;
-        span { /* drop-down arrow */
-            position: absolute;
-            right: 0;
-            font-style: normal;
-        }
-    }
-    div {
-        padding-left: 20em;
-    }
-    b {
-        display: inline-block;
-        padding: 0px 2px;
-    }
-    b.spacer {
-        visibility: hidden;
+        &:hover.x { background-color: darken($text_green, 20); }
     }
 }
 
